src/core/landing/styles.scss
@import '../../styles/common.scss';

.centered-container {
  @extend %align-all;
  @extend %white-text;
}

.footer {
  @extend %center-align;
  width: 80vw;
  &-contact-btn {
    @extend %center-align;
  }
  &-container {
    height: 450px;
  }
  &-content {
    height: 250px;
    &-container {
      @extend %align-all;
      display: grid;
      padding-top: 20px;
    }
  }
  &-menu {
    &-container {
      @extend %align-all
    }
  }
  &-social {
    @extend %vertical-align;
    padding: 4px;
    width: 28px;
  }
  &-text {
    @extend %center-align;
    &-social {
      @extend %center-align;
      padding-bottom: 10px;
    }
  }
}

.landing {
  &-form {
    @extend %center-align;
    padding: 10px;
  }
  &-step-num {
    margin: 0 20px 0 0 !important;
    padding-left: 20px;
    text-align: center;
    width: 100%;
  }
}

.package-home-footer {
  justify-content: flex-end;
  padding: 20px;
}

.section-two {
  justify-content: center;
  &-container {
    display: flex;
    flex-direction: column;
    height: 500px;
    @extend %vertical-align;
    @media #{$mobile-device} {
      height: 800px;
    }
  }
  &-header {
    border-bottom: $voyago-lighter-grey 1px solid;
    border-top: $voyago-lighter-grey 1px solid;
    color: $voyago-grey;
    margin: 20px 0 !important;
    padding-top: 20px;
    padding-bottom: 5px;

  }
  &-step {
    &-card {
      padding: 0 55px;
    }
  }
}

.section-four {
  @extend %center-align;
  &-container {
    @extend %center-align;
    display: flex;
    flex-direction: column;
    height: 500px;
    @media #{$mobile-device} {
      background-color: $voyago-lighter-grey;
      max-width: 1000px;
    }
  }
}

.section-center-container {
  color: $voyago-white;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.top-section-btn {
  margin: 20px;
  @media #{$mobile-device} {
    margin: 10px;
  }
}

.voyago {
  &-footer {
    &-text {
      color: $voyago-light-grey;
      font-size: 2.5rem;
      font-style: italic;
      &-go {
        color: $voyago-primary;
        font-weight: 600;
      }
    }
    &-logo {
      margin-top: -32px;
      width: 25vw;
    }
  }
}

